# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2010-10-22  Christian Heller  <christian.heller@tuxtax.de>
        * Figure out why logging does not produce any message in log file

2010-10-20  Christian Heller  <christian.heller@tuxtax.de>
        * Add test functions

2010-10-19  Christian Heller  <christian.heller@tuxtax.de>
        * Restructure test function directory

2010-10-10  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up logical errors
        * Adapt "set" function to try to make it work with "tester.c"

2010-09-22  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up logical errors
        * Make cyboi runnable showing help message

2010-09-19  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors
        * Make cyboi fully compilable and linkable again

2010-09-04  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors

2010-09-03  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors

2010-08-14  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * CAUTION! Parameter values such as *_MEMORY_ABSTRACTION should always be handed over together with MEMORY_ABSTRACTION_COUNT,
            but NOT for array functions, to avoid cyclic calls when evaluating an "ABSTRACTION" constant